feat(hero): membuat hero section

--- a/index.html
+++ b/index.html
@@ -12,5 +12,54 @@
     />
     <link rel="stylesheet" href="style.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo-wrapper">
+                <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc">
+                <p>Google Developer Student Club</p>
+            </div>
+            <ul id="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#organizers">Organizers</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <button class="button-primary">Login</button>
+        </nav>
+    </header>
+    <section id="hero">
+        <div class="hero-wrapper">
+            <div class="hero-text-wrapper">
+                <p>Hello!</p>
+                <h1>Let’s Connect, Learn, and Grow with GDSC <span>UNSRI</span></h1>
+            </div>
+            <div class="hero-button-wrapper">
+                <button class="button-primary">Join Us</button>
+            </div>
+        </div>
+    </section>
+    <section id="shortInfo">
+        <div class="shortInfo-wrapper">
+            <div class="shortInfo">
+                <h1>1057</h1>
+                <p>Group Members</p>
+            </div>
+            <div class="shortInfo">
+                <h1>16</h1>
+                <p>Core Teams</p>
+            </div>
+            <div class="shortInfo">
+                <h1>43</h1>
+                <p>Events</p>
+            </div>
+            <div class="shortInfo">
+                <h1>5</h1>
+                <p>Media Partners</p>
+            </div>
+        </div>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
