feat(about): membuat section about

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Google Developer Student Club</p>
             </div>
             <ul id="menu">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#events">Events</a></li>
                 <li><a href="#organizers">Organizers</a></li>
@@ -60,6 +60,63 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc" class="about-absolute-logo">
+        <div class="about-wrapper">
+            <div class="about-img-wrapper">
+                <img src="./assets/about-us/about-img.png" alt="about GDSC UNSRI">
+                <h1>Join Us</h1>
+            </div>
+            <div class="about-text-wrapper">
+                <div class="about-text-title-wrapper" >
+                    <h1>Get to Know GDSC <span>UNSRI</span></h1>
+                </div>
+                <div class="about-text-details-wrapper">
+                        <div class="about-text-detail">
+                            <h3>What is GDSC UNSRI?</h3>
+                            <p>Google Developer Student Clubs Universitas Sriwijaya is a university based community groups for students who interested in Google developer technologies.</p>
+                        </div>
+                        <div class="about-text-detail">
+                            <h3>What is GDSC UNSRI?</h3>
+                            <p>Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome.</p>
+                        </div>
+                        <div class="about-text-detail">
+                            <h3>What can you get by joining this community?</h3>
+                            <p>By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.</p>
+                        </div>
+                    </div>
+                </div>
+                <img src="./assets/abstrak-vector.svg" alt="vector" class="about-absolute-vector">
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-wrapper">
+            <div class="GDSC-footer-wrapper">
+                <div class="logo-footer-wrapper">
+                    <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc">
+                    <p>Google Developer Student Club</p>
+                </div>
+                <div class="text-footer-wrapper">
+                    <p>© 2024 Google</p>
+                </div>
+            </div> 
+
+            <div class="quick-footer-wrapper">
+                <p>Quick Links</p>
+                <p>Chapters</p>
+                <p>Upcoming Events</p>
+                <p>About GDSC</p>
+                <p>Lead Terms</p>
+                <p>Participation Terms</p>
+                <p>Privacy</p>
+                <p>Terms</p>
+            </div>
+            <div class="power-footer-wrapper">
+                <p>Powered by</p>
+            </div>
+        </div>
+      </footer>
     <script src="script.js"></script>
   </body>
 </html>
