feat(events): membuat event upcoming

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="about-wrapper">
             <div class="about-img-wrapper">
                 <img src="./assets/about-us/about-img.png" alt="about GDSC UNSRI">
-                <h1>Join Us</h1>
+                <h1>Join Us!</h1>
             </div>
             <div class="about-text-wrapper">
                 <div class="about-text-title-wrapper" >
@@ -90,6 +90,99 @@
             </div>
         </div>
     </section>
+    <section id="events">
+        <div class="events-upcoming-wrapper">
+            <div class="event-img-text-wrapper">
+                <img src="./assets/abstrak-vector.svg" alt="vektor" style=" width: 160px;
+                height: 24px;">
+                <div class="event-text-wrapper">
+                    <h1>Upcoming Events</h1>
+                    <p>Don’t miss out on these exciting events—</p>
+                </div>
+            </div>
+            <div class="event-upcoming-cards-wrapper">
+                <div class="event-upcoming-card">
+                    <div class="event-upcoming-card-text">
+                        <div class="event-upcoming-text-calendar">
+                            <h3>JUN</h3>
+                            <h1>14</h1>
+                            <h3>2024</h3>
+                            <p>01.30 PM</p>
+                        </div>
+                        <div class="event-upcoming-text-name">
+                            <div class="event-upcoming-text-name-key">
+                                <p>UI/UX</p>
+                                <P>Career Development</P>
+                            </div>
+                            <div class="event-upcoming-text-name-title">
+                                    <h1>Redesign Challange</h1>
+                                    <div class="event-upcoming-text-name-title-place">
+                                        <img src="./assets/events/Pin_alt_fill.png" alt="pin">
+                                        <p>Bevy Virtual Conference</p>
+                                    </div>
+                            </div>
+                            <div class="event-upcoming-text-name-button">
+                                <button class="button-primary">RSVP Now</button>
+                                <button class="button-secondary">Detail</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="event-upcoming-card-img">
+                        <img src="./assets/events/redesign.png" alt="">
+                    </div>
+                </div>
+                <div class="event-upcoming-card">
+                    <div class="event-upcoming-card-text">
+                        <div class="event-upcoming-text-calendar">
+                            <h3>JUN</h3>
+                            <h1>2</h1>
+                            <h3>2024</h3>
+                            <p>10.00 AM</p>
+                        </div>
+                        <div class="event-upcoming-text-name">
+                            <div class="event-upcoming-text-name-key">
+                                <p>UI/UX</p>
+                                <P>Career Development</P>
+                                <P>Web</P>
+                            </div>
+                            <div class="event-upcoming-text-name-title">
+                                    <h1>Maximize your Content</h1>
+                                    <div class="event-upcoming-text-name-title-place">
+                                        <img src="./assets/events/Pin_alt_fill.png" alt="pin">
+                                        <p>Bevy Virtual Conference</p>
+                                    </div>
+                            </div>
+                            <div class="event-upcoming-text-name-button">
+                                <button class="button-primary">RSVP Now</button>
+                                <button class="button-secondary">Detail</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="event-upcoming-card-img">
+                        <img src="./assets/events/maximize.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="events-post-wrapper">
+            <div class="events-post-text-img-wrapper">
+                <div class="events-post-text">
+                    <h1>Post Events</h1>
+                    <p>Stay engaged and never miss out on valuable knowledge and networking opportunities!</p>
+                </div>
+                <img src="./assets/abstrak-vector.svg" alt="vector">
+            </div>
+            <div class="card-container">
+                <div class="card">Card 1</div>
+                <div class="card">Card 2</div>
+                <div class="card">Card 3</div>
+                <div class="card">Card 4</div>
+                <div class="card">Card 5</div>
+                <div class="card">Card 6</div>
+                <div class="card">Card 7</div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer-wrapper">
             <div class="GDSC-footer-wrapper">
@@ -103,14 +196,18 @@
             </div> 
 
             <div class="quick-footer-wrapper">
-                <p>Quick Links</p>
-                <p>Chapters</p>
-                <p>Upcoming Events</p>
-                <p>About GDSC</p>
-                <p>Lead Terms</p>
-                <p>Participation Terms</p>
-                <p>Privacy</p>
-                <p>Terms</p>
+                <div class="text-quick-footer-wrapper">
+                    <p>Quick Links</p>
+                </div>
+                <div class="list-quick-footer-wrapper">
+                    <p>Chapters</p>
+                    <p>Upcoming Events</p>
+                    <p>About GDSC</p>
+                    <p>Lead Terms</p>
+                    <p>Participation Terms</p>
+                    <p>Privacy</p>
+                    <p>Terms</p>
+                </div>
             </div>
             <div class="power-footer-wrapper">
                 <p>Powered by</p>
