--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GDSC UNSRI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
         <nav class="navbar">
             <div class="logo-wrapper">
@@ -68,26 +69,29 @@
                 <h1>Join Us!</h1>
             </div>
             <div class="about-text-wrapper">
-                <div class="about-text-title-wrapper" >
+                <div class="about-text-title-wrapper">
                     <h1>Get to Know GDSC <span>UNSRI</span></h1>
                 </div>
                 <div class="about-text-details-wrapper">
-                        <div class="about-text-detail">
-                            <h3>What is GDSC UNSRI?</h3>
-                            <p>Google Developer Student Clubs Universitas Sriwijaya is a university based community groups for students who interested in Google developer technologies.</p>
-                        </div>
-                        <div class="about-text-detail">
-                            <h3>What is GDSC UNSRI?</h3>
-                            <p>Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome.</p>
-                        </div>
-                        <div class="about-text-detail">
-                            <h3>What can you get by joining this community?</h3>
-                            <p>By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.</p>
-                        </div>
+                    <div class="about-text-detail">
+                        <h3>What is GDSC UNSRI?</h3>
+                        <p>Google Developer Student Clubs Universitas Sriwijaya is a university based community groups
+                            for students who interested in Google developer technologies.</p>
+                    </div>
+                    <div class="about-text-detail">
+                        <h3>What is GDSC UNSRI?</h3>
+                        <p>Students from all undergraduate or graduate programs with an interest in growing as a
+                            developer are welcome.</p>
+                    </div>
+                    <div class="about-text-detail">
+                        <h3>What can you get by joining this community?</h3>
+                        <p>By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and
+                            build solutions for local businesses and their community.</p>
                     </div>
                 </div>
-                <img src="./assets/abstrak-vector.svg" alt="vector" class="about-absolute-vector">
             </div>
+            <img src="./assets/abstrak-vector.svg" alt="vector" class="about-absolute-vector">
+        </div>
         </div>
     </section>
     <section id="events">
@@ -115,11 +119,11 @@
                                 <P>Career Development</P>
                             </div>
                             <div class="event-upcoming-text-name-title">
-                                    <h1>Redesign Challange</h1>
-                                    <div class="event-upcoming-text-name-title-place">
-                                        <img src="./assets/events/Pin_alt_fill.png" alt="pin">
-                                        <p>Bevy Virtual Conference</p>
-                                    </div>
+                                <h1>Redesign Challange</h1>
+                                <div class="event-upcoming-text-name-title-place">
+                                    <img src="./assets/events/Pin_alt_fill.png" alt="pin">
+                                    <p>Bevy Virtual Conference</p>
+                                </div>
                             </div>
                             <div class="event-upcoming-text-name-button">
                                 <button class="button-primary">RSVP Now</button>
@@ -146,11 +150,11 @@
                                 <P>Web</P>
                             </div>
                             <div class="event-upcoming-text-name-title">
-                                    <h1>Maximize your Content</h1>
-                                    <div class="event-upcoming-text-name-title-place">
-                                        <img src="./assets/events/Pin_alt_fill.png" alt="pin">
-                                        <p>Bevy Virtual Conference</p>
-                                    </div>
+                                <h1>Maximize your Content</h1>
+                                <div class="event-upcoming-text-name-title-place">
+                                    <img src="./assets/events/Pin_alt_fill.png" alt="pin">
+                                    <p>Bevy Virtual Conference</p>
+                                </div>
                             </div>
                             <div class="event-upcoming-text-name-button">
                                 <button class="button-primary">RSVP Now</button>
@@ -170,18 +174,166 @@
                     <h1>Post Events</h1>
                     <p>Stay engaged and never miss out on valuable knowledge and networking opportunities!</p>
                 </div>
-                <img src="./assets/abstrak-vector.svg" alt="vector">
+                <img src="./assets/abstrak-vector.svg" alt="vector" style=" width: 140px;
+                height: 24px; position: absolute; top: 150px; left: 800px; z-index: 1000; height: 1850px;">
             </div>
             <div class="card-container">
-                <div class="card">Card 1</div>
-                <div class="card">Card 2</div>
-                <div class="card">Card 3</div>
-                <div class="card">Card 4</div>
-                <div class="card">Card 5</div>
-                <div class="card">Card 6</div>
-                <div class="card">Card 7</div>
+                <div class="card-event">
+                    <img src="./assets/events/post_event3-img.png" alt="event-img">
+                    <div class="card-event-text-wrapper">
+                        <h3>Webinar Data Secure</h3>
+                        <div class="card-event-text-location">
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Info_fill.png" alt="info">
+                                <p>Speaker Session / Tech Talk</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Date_range_fill.png" alt="info">
+                                <p>24 Maret 2024</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/rename.png" alt="info">
+                                <p>Bevy Virtual Converence</p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card-event-join-wrapper">
+                        <div class="text-location-icon">
+                            <img src="./assets/events/Group_fill.png" alt="info" style="width: 24px; height: 24px;">
+                            <p>143+ RSVP'd</p>
+                        </div>
+                        <button class="button-primary">Detail</button>
+                    </div>
+                </div>
+                <div class="card-event">
+                    <img src="./assets/events/post_event3-img.png" alt="event-img">
+                    <div class="card-event-text-wrapper">
+                        <h3>Webinar Data Secure</h3>
+                        <div class="card-event-text-location">
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Info_fill.png" alt="info">
+                                <p>Speaker Session / Tech Talk</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Date_range_fill.png" alt="info">
+                                <p>24 Maret 2024</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/rename.png" alt="info">
+                                <p>Bevy Virtual Converence</p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card-event-join-wrapper">
+                        <div class="text-location-icon">
+                            <img src="./assets/events/Group_fill.png" alt="info" style="width: 24px; height: 24px;">
+                            <p>143+ RSVP'd</p>
+                        </div>
+                        <button class="button-primary">Detail</button>
+                    </div>
+                </div>
+                <div class="card-event">
+                    <img src="./assets/events/post_event3-img.png" alt="event-img">
+                    <div class="card-event-text-wrapper">
+                        <h3>Webinar Data Secure</h3>
+                        <div class="card-event-text-location">
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Info_fill.png" alt="info">
+                                <p>Speaker Session / Tech Talk</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Date_range_fill.png" alt="info">
+                                <p>24 Maret 2024</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/rename.png" alt="info">
+                                <p>Bevy Virtual Converence</p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card-event-join-wrapper">
+                        <div class="text-location-icon">
+                            <img src="./assets/events/Group_fill.png" alt="info" style="width: 24px; height: 24px;">
+                            <p>143+ RSVP'd</p>
+                        </div>
+                        <button class="button-primary">Detail</button>
+                    </div>
+                </div>
+                <div class="card-event">
+                    <img src="./assets/events/post_event3-img.png" alt="event-img">
+                    <div class="card-event-text-wrapper">
+                        <h3>Webinar Data Secure</h3>
+                        <div class="card-event-text-location">
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Info_fill.png" alt="info">
+                                <p>Speaker Session / Tech Talk</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Date_range_fill.png" alt="info">
+                                <p>24 Maret 2024</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/rename.png" alt="info">
+                                <p>Bevy Virtual Converence</p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card-event-join-wrapper">
+                        <div class="text-location-icon">
+                            <img src="./assets/events/Group_fill.png" alt="info" style="width: 24px; height: 24px;">
+                            <p>143+ RSVP'd</p>
+                        </div>
+                        <button class="button-primary">Detail</button>
+                    </div>
+                </div>
+                <div class="card-event">
+                    <img src="./assets/events/post_event3-img.png" alt="event-img">
+                    <div class="card-event-text-wrapper">
+                        <h3>Webinar Data Secure</h3>
+                        <div class="card-event-text-location">
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Info_fill.png" alt="info">
+                                <p>Speaker Session / Tech Talk</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/Date_range_fill.png" alt="info">
+                                <p>24 Maret 2024</p>
+                            </div>
+                            <div class="text-location-icon">
+                                <img src="./assets/events/rename.png" alt="info">
+                                <p>Bevy Virtual Converence</p>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card-event-join-wrapper">
+                        <div class="text-location-icon">
+                            <img src="./assets/events/Group_fill.png" alt="info" style="width: 24px; height: 24px;">
+                            <p>143+ RSVP'd</p>
+                        </div>
+                        <button class="button-primary">Detail</button>
+                    </div>
+                </div>
             </div>
+
         </div>
+    </section>
+    <section id="quotes">
+        <div class="quotes-wrapper">
+            <img src="./assets/events/white-vector.png" alt="vector" style="width: 108px;height: 18px; position: absolute; top: 10px; right: 40px; z-index: 9999;">
+            <p>Collaborate with fellow developers, build impactful solutions, and grow with Google technology.</p>
+            <div class="quotes-button-wrapper">
+                <button class="button-third">Join Us</button>
+            </div>
+            <img src="./assets/events/white-vector.png" alt="vector" style="width: 108px;height: 18px; position: absolute; bottom: 18px; left: 15px;">
+        </div>
+    </section>
+    <section id="organizers">
+        
     </section>
     <footer>
         <div class="footer-wrapper">
@@ -193,7 +345,7 @@
                 <div class="text-footer-wrapper">
                     <p>© 2024 Google</p>
                 </div>
-            </div> 
+            </div>
 
             <div class="quick-footer-wrapper">
                 <div class="text-quick-footer-wrapper">
@@ -213,7 +365,8 @@
                 <p>Powered by</p>
             </div>
         </div>
-      </footer>
+    </footer>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
