feat(organizers): membuat organizer

--- a/index.html
+++ b/index.html
@@ -333,7 +333,60 @@
         </div>
     </section>
     <section id="organizers">
-        
+        <div class="organizers-wrapper">
+            <div class="organizers-text-wrapper">
+                <div class="organizers-title">
+                    <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc" style="width: 50.799px; height: 24.674px;">
+                    <h1>Organizers</h1>
+                </div>
+                <p>Meet the dedicated team behind GDSC UNSRI</p>
+            </div>
+            <div class="organizers-foto">
+                <div class="organizers-picture-wrapper-1">
+                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/suci-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/amal-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/vito-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/rai-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_gede-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/suci-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/amal-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/vito-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/rai-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_gede-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                </div>
+                <div class="organizers-picture-wrapper-2">
+                    <img src="./assets/organizers/Kak- edo.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-nau.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-anan.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-re.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/saci.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/fika.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-farel.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-doni.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/Kak- edo.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-nau.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-anan.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-re.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/saci.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/fika.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-farel.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-doni.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="media-partners">
+        <div class="medparts-wrapper">
+            <div class="medparts-img-wrapper">
+                
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer-wrapper">
@@ -346,7 +399,6 @@
                     <p>© 2024 Google</p>
                 </div>
             </div>
-
             <div class="quick-footer-wrapper">
                 <div class="text-quick-footer-wrapper">
                     <p>Quick Links</p>
