--- a/index.html
+++ b/index.html
@@ -384,8 +384,44 @@
     <section id="media-partners">
         <div class="medparts-wrapper">
             <div class="medparts-img-wrapper">
-                
+                <div class="medparts-cols">
+                    <img src="./assets/medparts/dicoding-img.png" alt="medparts">
+                    <img src="./assets/medparts/kejar_mimpi-img.png" alt="medparts">
+                </div>
+                <div class="medparts-cols">
+                    <img src="./assets/medparts/green.png" alt="medparts">
+                    <img src="./assets/medparts/uiux-img.png" alt="medparts">
+                    <img src="./assets/medparts/blue.png" alt="medparts">
+                </div>
+                <div class="medparts-cols">
+                    <img src="./assets/medparts/gdp-img.png" alt="medparts">
+                    <img src="./assets/medparts/palembang_digital-img.png" alt="medparts">
+                </div>
             </div>
+            <div class="medparts-text-wrapper">
+                <h1>Our Media Partners</h1>
+                <img src="./assets/logo/logo-gdsc2.png" alt="logo gdsc" style="position: absolute; z-index: 999; bottom: 80px; left: 35px; width: 150px; height: 93px;">
+                <img src="./assets/events/white-vector.png" alt="vektor" style="position: absolute; z-index: 999; top: 80px; left: 45px;">
+                <img src="./assets/medparts/black.png" alt="vektor" style="position: absolute; z-index: 999; top: 0; right: 0; width: 200px; height: 200px;">
+                <img src="./assets/medparts/black.png" alt="vektor" style="position: absolute; z-index: 999; bottom: 0; right: 0; transform: rotate(-270deg); width: 200px; height: 200px;">
+            </div>
+        </div>
+    </section>
+    <section id="gallery">
+        <div class="gallery-wrapper">
+            <div class="gallery-card">
+                <img src="./assets/gallery/gallery-img-2.png" alt="img">
+                <!-- <img src="./assets/gallery/gallery-img.png" alt="img">
+                <img src="./assets/gallery/gallery-img-3.png" alt="img"> -->
+            </div>
+        </div>
+        <div class="gallery-text-wrapper">
+            <div class="gallery-text-title-wrapper">
+                <h1>GDSC</h1>
+                <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc">
+                <h1>Gallery</h1>
+            </div>
+            <p>Explore our Gallery to see highlights from GDSC UNSRI events and activities</p>
         </div>
     </section>
     <footer>
