feat(gallery): membuat gallery

--- a/index.html
+++ b/index.html
@@ -408,20 +408,55 @@
         </div>
     </section>
     <section id="gallery">
+        <img src="./assets/abstrak-vector.svg" alt="vektor" style="width: 163.5px;
+height: 18.5px; position: absolute; z-index: 555; top: 160px; left: 70px;">
+        <img src="./assets/abstrak-vector.svg" alt="vektor" style="width: 163.5px;
+height: 18.5px; position: absolute; z-index: 555; bottom: 160px; right: 70px;">
+        <img src="./assets/gallery/red-circle.png" alt="vektor" style="position: absolute; z-index: 999; top: 70px; right: 0;">
+        <img src="./assets/gallery/blue-circle.png" alt="vektor" style="position: absolute; z-index: 999; bottom: 70px; left: 0;">
         <div class="gallery-wrapper">
-            <div class="gallery-card">
-                <img src="./assets/gallery/gallery-img-2.png" alt="img">
-                <!-- <img src="./assets/gallery/gallery-img.png" alt="img">
-                <img src="./assets/gallery/gallery-img-3.png" alt="img"> -->
+            <div class="gallery-card" style="position: relative;">
+                <img src="./assets/gallery/gy-circle.png" alt="vektor" style="width: 100px;
+height: 60px; position: absolute; z-index: 999; bottom: 110px; right: 70px;">
+                <img src="./assets/abstrak-vector.svg" alt="vektor" style="width: 163.5px;
+height: 18.5px; position: absolute; z-index: 555; bottom: 160px; left: 70px;">
+                <div class="gallery-card-img">
+                    <img src="./assets/gallery/gallery-img-2.png" alt="img" style="width: 500px;
+    height: 300px; object-fit: cover;">
+                    <!-- <img src="./assets/gallery/gallery-img.png" alt="img" style="width: 500px;
+    height: 300px; object-fit: cover;">
+                    <img src="./assets/gallery/gallery-img-3.png" alt="img" style="width: 500px;
+    height: 300px; object-fit: cover;"> -->
+                </div>
+                <div class="gallery-text-wrapper">
+                    <div class="gallery-text-title-wrapper">
+                        <h1>GDSC</h1>
+                        <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc" style="width: 50.799px;
+height: 24.674px;">
+                        <h1>Gallery</h1>
+                    </div>
+                    <p>Explore our Gallery to see highlights from GDSC UNSRI events and activities</p>
             </div>
         </div>
-        <div class="gallery-text-wrapper">
-            <div class="gallery-text-title-wrapper">
-                <h1>GDSC</h1>
-                <img src="./assets/logo/logo-gdsc.png" alt="logo gdsc">
-                <h1>Gallery</h1>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="contact-wrapper">
+            <div class="contact-text-wrapper">
+                <h1>Be a part of something bigger—</h1>
             </div>
-            <p>Explore our Gallery to see highlights from GDSC UNSRI events and activities</p>
+            <div class="contact-logo-wrapper">
+                <div class="contact-button-wrapper">
+                    <button class="button-four">Join Us</button>
+                </div>
+                <div class="text-logo-contact-wrapper">
+                    <p>Stay connected and never miss an update!</p>
+                </div>
+                <div class="logo-contact-wrapper">
+
+                </div>
+            </div>
+            </div>
         </div>
     </section>
     <footer>
@@ -450,7 +485,7 @@
                 </div>
             </div>
             <div class="power-footer-wrapper">
-                <p>Powered by</p>
+                <p>Powered by <img src="./assets/footer/footer-img.png" alt=""></p>
             </div>
         </div>
     </footer>
