--- a/index.html
+++ b/index.html
@@ -324,12 +324,14 @@
     </section>
     <section id="quotes">
         <div class="quotes-wrapper">
-            <img src="./assets/events/white-vector.png" alt="vector" style="width: 108px;height: 18px; position: absolute; top: 10px; right: 40px; z-index: 9999;">
+            <img src="./assets/events/white-vector.png" alt="vector"
+                style="width: 108px;height: 18px; position: absolute; top: 10px; right: 40px; z-index: 9999;">
             <p>Collaborate with fellow developers, build impactful solutions, and grow with Google technology.</p>
             <div class="quotes-button-wrapper">
                 <button class="button-third">Join Us</button>
             </div>
-            <img src="./assets/events/white-vector.png" alt="vector" style="width: 108px;height: 18px; position: absolute; bottom: 18px; left: 15px;">
+            <img src="./assets/events/white-vector.png" alt="vector"
+                style="width: 108px;height: 18px; position: absolute; bottom: 18px; left: 15px;">
         </div>
     </section>
     <section id="organizers">
@@ -343,40 +345,72 @@
             </div>
             <div class="organizers-foto">
                 <div class="organizers-picture-wrapper-1">
-                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/suci-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/amal-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/vito-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/rai-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_gede-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/suci-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/amal-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/vito-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/rai-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak_gede-img.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/suci-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/amal-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/vito-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/rai-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_gede-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_nanad-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_fakhri-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/suci-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/amal-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/vito-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/rai-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_zhafran-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak_gede-img.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
                 </div>
                 <div class="organizers-picture-wrapper-2">
-                    <img src="./assets/organizers/Kak- edo.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-nau.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-anan.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-re.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/saci.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/fika.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-farel.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-doni.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/Kak- edo.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-nau.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-anan.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-re.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/saci.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/fika.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-farel.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
-                    <img src="./assets/organizers/kak-doni.png" alt="foto" style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/Kak- edo.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-nau.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-anan.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-re.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/saci.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/fika.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-farel.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-doni.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/Kak- edo.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-nau.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-anan.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-re.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/saci.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/fika.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-farel.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
+                    <img src="./assets/organizers/kak-doni.png" alt="foto"
+                        style="width: 240px; height: 343px; object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -400,10 +434,14 @@
             </div>
             <div class="medparts-text-wrapper">
                 <h1>Our Media Partners</h1>
-                <img src="./assets/logo/logo-gdsc2.png" alt="logo gdsc" style="position: absolute; z-index: 999; bottom: 80px; left: 35px; width: 150px; height: 93px;">
-                <img src="./assets/events/white-vector.png" alt="vektor" style="position: absolute; z-index: 999; top: 80px; left: 45px;">
-                <img src="./assets/medparts/black.png" alt="vektor" style="position: absolute; z-index: 999; top: 0; right: 0; width: 200px; height: 200px;">
-                <img src="./assets/medparts/black.png" alt="vektor" style="position: absolute; z-index: 999; bottom: 0; right: 0; transform: rotate(-270deg); width: 200px; height: 200px;">
+                <img src="./assets/logo/logo-gdsc2.png" alt="logo gdsc"
+                    style="position: absolute; z-index: 999; bottom: 80px; left: 35px; width: 150px; height: 93px;">
+                <img src="./assets/events/white-vector.png" alt="vektor"
+                    style="position: absolute; z-index: 999; top: 80px; left: 45px;">
+                <img src="./assets/medparts/black.png" alt="vektor"
+                    style="position: absolute; z-index: 999; top: 0; right: 0; width: 200px; height: 200px;">
+                <img src="./assets/medparts/black.png" alt="vektor"
+                    style="position: absolute; z-index: 999; bottom: 0; right: 0; transform: rotate(-270deg); width: 200px; height: 200px;">
             </div>
         </div>
     </section>
@@ -412,8 +450,10 @@
 height: 18.5px; position: absolute; z-index: 555; top: 160px; left: 70px;">
         <img src="./assets/abstrak-vector.svg" alt="vektor" style="width: 163.5px;
 height: 18.5px; position: absolute; z-index: 555; bottom: 160px; right: 70px;">
-        <img src="./assets/gallery/red-circle.png" alt="vektor" style="position: absolute; z-index: 999; top: 70px; right: 0;">
-        <img src="./assets/gallery/blue-circle.png" alt="vektor" style="position: absolute; z-index: 999; bottom: 70px; left: 0;">
+        <img src="./assets/gallery/red-circle.png" alt="vektor"
+            style="position: absolute; z-index: 999; top: 70px; right: 0;">
+        <img src="./assets/gallery/blue-circle.png" alt="vektor"
+            style="position: absolute; z-index: 999; bottom: 70px; left: 0;">
         <div class="gallery-wrapper">
             <div class="gallery-card" style="position: relative;">
                 <img src="./assets/gallery/gy-circle.png" alt="vektor" style="width: 100px;
@@ -436,27 +476,36 @@ height: 24.674px;">
                         <h1>Gallery</h1>
                     </div>
                     <p>Explore our Gallery to see highlights from GDSC UNSRI events and activities</p>
+                </div>
             </div>
-        </div>
         </div>
     </section>
     <section id="contact">
+        <img src="./assets/events/white-vector.png" alt="vektor" style="width: 163.5px;
+height: 18.5px; position: absolute; z-index: 555; top: 100px; left: 70px;">
+        <img src="./assets/events/white-vector.png" alt="vektor" style="width: 163.5px;
+height: 18.5px; position: absolute; z-index: 555; bottom: 100px; right: 70px;">
+        <img src="./assets/contact/polyy.png" alt="vektor" style="position: absolute; z-index: 999; top: 60px; right: 30px; width: 150px; height: 150px;">
+        <img src="./assets/contact/polyred.png" alt="vektor" style="position: absolute; z-index: 999; bottom: 60px; left: 30px; width: 150px; height: 150px;">
         <div class="contact-wrapper">
-            <div class="contact-text-wrapper">
-                <h1>Be a part of something bigger—</h1>
-            </div>
+            <h1>Be a part of something bigger—</h1>
+
             <div class="contact-logo-wrapper">
                 <div class="contact-button-wrapper">
-                    <button class="button-four">Join Us</button>
+                    <button class="button-third">Join Us</button>
                 </div>
                 <div class="text-logo-contact-wrapper">
                     <p>Stay connected and never miss an update!</p>
                 </div>
                 <div class="logo-contact-wrapper">
-
+                    <a href=""><img src="assets/contact/ig.svg" alt="contact"></a>
+                    <a href=""><img src="assets/contact/tiktok.svg" alt="contact"></a>
+                    <a href=""><img src="assets/contact/yt.svg" alt="contact"></a>
+                    <a href=""> <img src="assets/contact//linkeidn.svg" alt="contact"></a>
                 </div>
             </div>
-            </div>
+        </div>
+        </div>
         </div>
     </section>
     <footer>
@@ -485,7 +534,7 @@ height: 24.674px;">
                 </div>
             </div>
             <div class="power-footer-wrapper">
-                <p>Powered by <img src="./assets/footer/footer-img.png" alt=""></p>
+                <p>Powered by <img src="./assets/footer/bevy.png" alt="bevy" style="width: 90px; height: 30px; "></p>
             </div>
         </div>
     </footer>
