fix(footer): memperbaiki footer

--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@ height: 18.5px; position: absolute; z-index: 555; bottom: 100px; right: 70px;">
                 </div>
             </div>
             <div class="power-footer-wrapper">
-                <p>Powered by <img src="./assets/footer/bevy.png" alt="bevy" style="width: 90px; height: 30px; "></p>
+                <p>Powered by</p>
+                <img src="./assets/footer/bevy.png" alt="bevy" style="width: 90px; height: 30px; ">
             </div>
         </div>
     </footer>
